[homewizard] Support for kWh meter, Plug-in Battery and API v2. (#18099)
* Added support for kWh meter, Plug-in Battery and API v2.

Signed-off-by: Gearrel Welvaart <gearrel.welvaart@gmail.com>